--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="sidebar">
+<aside class="sidebar" id="sidebar">
   <div class="sidebar__header">
     <img src="assets/images/sidebarHeader.jpg" alt="">
   </div>
@@ -74,6 +74,6 @@
   </div> <!-- /.sidebar__content -->
   <div class="sidebar__footer">
     <a class="btn btn--red" href="works.html">My projects</a>
-    <button class="btn btn--blue" type="button">Message me</button>
+    <button class="btn btn--blue" type="button" data-modal="contact-modal">Message me</button>
   </div>
 </aside>
