--- a/src/assets/scss/blocks/add-post.scss
+++ b/src/assets/scss/blocks/add-post.scss
@@ -12,7 +12,7 @@
 
 .add-post__form {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .add-post__textarea {
@@ -20,7 +20,7 @@
   flex-grow: 1;
   width: 80%;
   overflow: hidden;
-  height: 26px;
+  height: 34px;
   font-family: inherit;
   font-size: 1.5rem;
   color: $white;
