--- a/src/assets/scss/blocks/nav.scss
+++ b/src/assets/scss/blocks/nav.scss
@@ -1,19 +1,24 @@
 .nav {
-  @include breakpoint($tablet-bp) {
-    display: none;
-  }
-
+    
   &--mobile {
-    display: block;
-    margin: 3rem 0;
+      display: none;
+      margin: 3rem 0;
+  }
+  
+  @include breakpoint($tablet-bp) {
+      display: none;
+      
+      &--mobile {
+          display: block;
+      }
   }
 }
 
 .nav__list {
   display: flex;
-
+  
   @include breakpoint($tablet-bp) {
-    flex-direction: column;
+      flex-direction: column;
   }
 }
 
@@ -21,70 +26,62 @@
   position: relative;
 
   &:hover {
-    .nav__link {
-      background-color: $blue;
-      text-decoration: none;
-    }
-
-    > .subnav {
-      display: block;
-    }
-  }
-  @include breakpoint($tablet-bp) {
-    &:hover {
       .nav__link {
-        background: none;
+          background-color: $blue;
+          text-decoration: none;
       }
-    }
+
+      > .subnav {
+          display: block;
+      }
+  }
+  
+  @include breakpoint($tablet-bp) {
+      &:hover {
+          .nav__link {
+              background: none;
+          }
+      }
   }
 }
 
 .nav__link {
   display: block;
+  padding: 1.35rem;
+
   font-size: 1.1rem;
+  line-height: 1.2;
   text-transform: uppercase;
   color: $white;
   text-decoration: none;
-  padding: 1.35rem;
-  line-height: 1.2;
 
   transition: background-color .2s linear;
 
-  &:hover {
-    background-color: $blue;
-  }
-
-  @include breakpoint($tablet-bp) {
-    padding-left: 0;
-    padding-right: 0;
-
-    &:hover {
-      background: none;
-    }
-  }
-
   &.has-subnav {
-    position: relative;
-    padding-right: 3.5rem;
-    &:after {
-      content: "";
-      display: block;
-      margin-top: 1px;
-      border-style: solid;
-      border-width: 6px 5px 0 5px;
-      border-color: $white transparent transparent transparent;
+      position: relative;
+      padding-right: 3.5rem;
 
-      position: absolute;
-      top: 50%;
-      right: 1.35rem;
-      transform: translateY(-50%);
-    }
+      &:after {
+          content: "";
+          display: block;
+          margin-top: 2px;
+
+          border-style: solid;
+          border-width: 6px 5px 0 5px;
+          border-color: $white transparent transparent transparent;
+
+          position: absolute;
+          top: 50%;
+          right: 1.35rem;
+          transform: translateY(-50%);
+      }
   }
-
+  
   @include breakpoint($tablet-bp) {
-    padding-left: 0;
-    padding-right: 0;
-
-    font-size: 1.6rem;
+      padding-left: 0;
+      padding-right: 0;
+      
+      font-size: 1.6rem;
   }
 }
+
