--- a/src/assets/scss/blocks/subnav.scss
+++ b/src/assets/scss/blocks/subnav.scss
@@ -1,47 +1,50 @@
 .subnav {
   display: none;
+
   width: 16.5rem;
+  padding: .5rem 0;
+
   background-color: $blue;
   border-radius: 0 0 5px 5px;
   box-shadow: 0 6px 8px rgba($black, .2);
-  padding: .5rem 0;
+
   position: absolute;
   top: 100%;
   left: 0;
-
+  
   @include breakpoint($tablet-bp) {
-
-    position: static;
-    width: 100%;
-    padding-left: 2rem;
-
-    background-color: transparent;
-    box-shadow: none;
+      position: static;
+      width: 100%;
+      padding-left: 1rem;
+      
+      background-color: transparent;
+      box-shadow: none;
   }
 }
 
 .subnav__link {
   display: block;
-  color: $white;
+  padding: .45rem 1.2rem;
+
   font-size: 1.2rem;
+  color: $white;
   text-decoration: none;
-  padding: 0.45rem 1.2rem;
 
   transition: background-color .2s ease-in-out;
 
   &:hover {
-    background-color: darken($blue, 5%);
-    text-decoration: none;
+      background-color: darken($blue, 5%);
+      text-decoration: none;
   }
-
+  
   @include breakpoint($tablet-bp) {
-    padding-left: 0;
-    padding-right: 0;
-
-    font-size: 1.4rem;
-
-    &:hover {
-      background: none;
-    }
+      padding-left: 0;
+      padding-right: 0;
+      
+      font-size: 1.5rem;
+      
+      &:hover {
+          background: none;
+      }
   }
 }
