--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -3,9 +3,9 @@
 <head>
     {{> head }}
 </head>
-<body class="show-sidebar">
+<body>
 
-    <div class="page">
+    <div class="page" id="page">
       {{> header }}
 
       {{> sidebar }}
@@ -19,6 +19,8 @@
     </div>
 
     {{> story-modal }}
+    {{> share-modal }}
+    {{> contact-modal }}
 
     <script src="assets/js/app.js"></script>
 </body>
